--- a/templates/enigmas/enigma_1.html
+++ b/templates/enigmas/enigma_1.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 1</title>
         <!-- template -->
+        <script>sessionStorage.fase = 1;</script>
     </head>
     <body>
         <div id="enigma" style="padding-top: 200px;">
