--- a/templates/enigmas/enigma_10.html
+++ b/templates/enigmas/enigma_10.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 10</title>
         <!-- template -->
+        <script>sessionStorage.fase = 10;</script>
     </head>
     <body>
 
