--- a/templates/enigmas/enigma_11.html
+++ b/templates/enigmas/enigma_11.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 11</title>
         <!-- template -->
+        <script>sessionStorage.fase = 11;</script>
     </head>
     <body>
         <div id="enigma">
