--- a/templates/enigmas/enigma_12.html
+++ b/templates/enigmas/enigma_12.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 12</title>
         <!-- template -->
+        <script>sessionStorage.fase = 12;</script>
     </head>
     <body>
         <div id="enigma">
