--- a/templates/enigmas/enigma_13.html
+++ b/templates/enigmas/enigma_13.html
@@ -3,6 +3,7 @@
     <head>
         <title>Ravtzn 13</title>
         <!-- template -->
+        <script>sessionStorage.fase = 13;</script>
     </head>
     <body>
         <div id="enigma" style="padding-top: 200px; font-size: 40px;">
