--- a/templates/enigmas/enigma_14.html
+++ b/templates/enigmas/enigma_14.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 14</title>
         <!-- template -->
+        <script>sessionStorage.fase = 14;</script>
     </head>
     <body>
         <div id="enigma">
