--- a/templates/enigmas/enigma_15.html
+++ b/templates/enigmas/enigma_15.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 15</title>
         <!-- template -->
+        <script>sessionStorage.fase = 15;</script>
     </head>
     <body>
         <div id="enigma" style="padding-top: 200px; font-size: 45px; color: #5b5b5b;">
