--- a/templates/enigmas/enigma_16.html
+++ b/templates/enigmas/enigma_16.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 16</title>
         <!-- template -->
+        <script>sessionStorage.fase = 16;</script>
     </head>
     <body>
         <div id="enigma" style="padding-top: 200px; font-size: 40px;">
