--- a/templates/enigmas/enigma_19.html
+++ b/templates/enigmas/enigma_19.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 19</title>
         <!-- template -->
+        <script>sessionStorage.fase = 19;</script>
     </head>
     <body>
         <div id="enigma">
