--- a/templates/enigmas/enigma_2.html
+++ b/templates/enigmas/enigma_2.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 2</title>
         <!-- template -->
+        <script>sessionStorage.fase = 2;</script>
     </head>
     <body>
         <div id="enigma" style="padding-top: 100px;">
