--- a/templates/enigmas/enigma_3.html
+++ b/templates/enigmas/enigma_3.html
@@ -4,6 +4,8 @@
         <title>Enigma 3</title>
         <!-- template -->
         <script>
+            sessionStorage.fase = 3;
+            
             var interval = setInterval(() => {
                 const date = new Date();
                 const time = date.getUTCHours() + " : " + date.getUTCMinutes() + " : " + date.getUTCSeconds();
