--- a/templates/enigmas/enigma_4.html
+++ b/templates/enigmas/enigma_4.html
@@ -4,6 +4,8 @@
         <title>Enigma 4</title>
         <!-- template -->
         <script>
+            sessionStorage.fase = 4;
+
             function generateWord(){
 
                 var word = "ruscochar".split("");
