--- a/templates/enigmas/enigma_5.html
+++ b/templates/enigmas/enigma_5.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 5</title>
         <!-- template -->
+        <script>sessionStorage.fase = 5;</script>
     </head>
     <body>
         <div id="enigma" style="color: #000; padding-top: 200px; font-size: 30px;">
