--- a/templates/enigmas/enigma_7.html
+++ b/templates/enigmas/enigma_7.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 7</title>
         <!-- template -->
+        <script>sessionStorage.fase = 7;</script>
     </head>
     <body>
         <div id="enigma" style="padding-top: 50px;">
