--- a/templates/enigmas/enigma_8.html
+++ b/templates/enigmas/enigma_8.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 8</title>
         <!-- template -->
+        <script>sessionStorage.fase = 8;</script>
         <script>
             function setText(){
 
