--- a/templates/enigmas/enigma_9.html
+++ b/templates/enigmas/enigma_9.html
@@ -3,10 +3,12 @@
     <head>
         <title>Enigma 9</title>
         <!-- template -->
+        <script>sessionStorage.fase = 9;</script>
     </head>
     <body>
-        <div id="enigma" style="padding-top: 200px; font-family: NanumPenScript; font-size: 25px;">
-            No dia nacional dos animais eu fui para a América. O que eu comi ao chegar lá ?
+        <div id="enigma" style="padding-top: 200px; font-size: 35px;">
+            No dia nacional dos animais eu fui para Nova York <br><br>
+            <span style="color: rgb(150,0,0);">O que eu comi ?</span>
         </div>
         <button onclick="sendAnswer();">Responder</button>
     </body>
