--- a/templates/enigmas/enigma_20.html
+++ b/templates/enigmas/enigma_20.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 20</title>
         <!-- template -->
+        <script>sessionStorage.fase = 20;</script>
     </head>
     <body>
         <div id="enigma" style="padding-top: 200px; font-size: 30px;">
