--- a/templates/enigmas/enigma_6.html
+++ b/templates/enigmas/enigma_6.html
@@ -3,6 +3,7 @@
     <head>
         <title>Enigma 6</title>
         <!-- template -->
+        <script>sessionStorage.fase = 6;</script>
     </head>
     <body>
         <div id="enigma" style="padding-top: 50px; font-family: Arial; font-size: 20px;">
